fix whitespace big

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     margin: 0px;
+    overflow-x :hidden; 
+
 }
 .navbar{
     display: grid;
